force display of scrollbars in some cases.  Increase font-size, bold some state related items.  Fix scrolling that was cropped in filter panels

--- a/public/js/p3/resources/GridStyle.css
+++ b/public/js/p3/resources/GridStyle.css
@@ -93,6 +93,12 @@
 }
 
 
+.patric .dgrid-footer {
+	font-size: 1.2em;
+	font-weight: bold;
+}
+
+
 .TaxonTreeGrid .dgrid-cell {
     border: 0px;
 }
