--- a/public/js/p3/resources/p3.css
+++ b/public/js/p3/resources/p3.css
@@ -724,16 +724,22 @@ div.pubmed ul li {
 
 }
 
-.PerspectiveQuery,
-.PerspectiveTotalCount {
+.patric .PerspectiveQuery,
+.patric .PerspectiveTotalCount {
     vertical-align:top;
+    font-size: 1.25em;
 }
 
-.PerspectiveType {
-    font-size:.85em;vertical-align:top;margin-top:2px;
+.patric .PerspectiveTotalCount {
+	color: #76a72d;
+	font-weight: bold;
+}
+
+.patric .PerspectiveType {
+    font-size:1.1em;vertical-align:top;margin-top:2px;
 }
 .patric .PerspectiveHeader .PerspectiveIcon.fa {
-    font-size:2.2em;float:left;margin-right:4px; font-weight:600;color:#76a72d;margin-top:4px;
+    font-size:3.2em;float:left;margin-right:4px; font-weight:600;color:#76a72d;margin-top:4px;
 }
 
 .patric.claro .dijitButtonNode {
@@ -741,3 +747,39 @@ div.pubmed ul li {
 }
 
 
+.FacetFilter ::-webkit-scrollbar,
+.dgrid ::-webkit-scrollbar {
+    height: 8px;
+    width: 8px;
+    background: #efefef;
+}
+
+
+.FacetFilter ::-webkit-scrollbar{
+	background: #333;
+	/*border-left: 1px solid #888;*/
+}
+
+
+
+.FacetFilter ::-webkit-scrollbar-thumb,
+.dgrid ::-webkit-scrollbar-thumb {
+    background: #333;
+    border-radius: 1ex;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+}
+
+
+.FacetFilter ::-webkit-scrollbar-thumb{
+	background: #333;
+	border: 1px solid #fff;
+}
+
+.FacetFilter ::-webkit-scrollbar-corner, 
+.dgrid ::-webkit-scrollbar-corner {
+    background: #000;
+}
+
+.dgrid ::-webkit-scrollbar:horizontal {
+    display: none;
+}
